# buzz

./: .cargo-rdme.toml  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js  test.sh
buzz/: Cargo.toml  all.html  index.html  sidebar-items.js
buzz-codegen/: Cargo.toml
buzz-macro/: Cargo.toml
buzz/benches/: http_parser_benchmark.rs
buzz/buzz/: fn.vec_to_route.html  struct.Buzz.html
buzz/json/: enum.JsonValue.html  index.html  sidebar-items.js  struct.Json.html
buzz/json/json/: struct.Json.html
buzz/json/parse/json_value/: enum.JsonValue.html
buzz/prelude/: attr.delete.html  attr.get.html  attr.options.html  attr.patch.html  attr.post.html  attr.put.html  derive.Deserialize.html  fn.vec_to_route.html  index.html  macro.route.html  macro.routes.html  sidebar-items.js  struct.Buzz.html  struct.BuzzContext.html  struct.Inject.html  struct.InjectMut.html  trait.Respond.html
buzz/src/: buzz.rs  http_response.rs  http_service.rs  lib.rs  routes.rs
buzz/src/http_parse/: mod.rs  parser.rs  tests.rs
buzz/src/json/: json.rs  mod.rs
buzz/src/json/parse/: json_value.rs  mod.rs  tests.rs  tokenizer.rs
buzz/src/json_parse/: mod.rs  tests.rs  tokenizer.rs
buzz/src/types/: http_response.rs  http_service.rs  mod.rs
buzz/src/types/traits/: mod.rs  respond.rs
buzz/tests/: integration_tests.proptest-regressions  integration_tests.rs  mock_buzz.rs  test_utils.rs
buzz/tests/trybuild/: route_non_ident_arg.rs  route_non_ident_arg.stderr  route_self_arg.rs  route_self_arg.stderr
src/: main.rs
(+207 files in other folders)
