[package]
name = "buzz"
version = "0.1.0"
edition = "2021"

[dependencies]
buzz-types = { path = "../buzz-types" }
buzz-codegen = { path = "../buzz-codegen" }

[dev-dependencies]
proptest = "1"
trybuild = "1.0"
criterion = "0.3"
futures = "0.3.31"
async-trait = "0.1.88"
proptest_async = { version = "0.2.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.44.1", features = ["full"] }

[features]
benchmark-internals = []

[[bench]]
name = "http_parser_benchmark"
harness = false
required-features = ["benchmark-internals"]
